# organizer

./: .gitignore  README.md  TODOs  avi.wad.Organizer.json  meson.build  org.gnome.Organizer.json  org.gnome.Organizer.json~  org.librehunt.Organizer.json
_build/: .ninja_deps  .ninja_log  build.ninja
_build/data/: avi.wad.Organizer.appdata.xml  org.gnome.Organizer.appdata.xml  org.librehunt.Organizer.appdata.xml
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: coredata.dat.prev
_build/meson-private/cmake_libhandy/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/meson-private/cmake_libhandy-0.0/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/src/: organizer  organizer.gresource
data/: avi.wad.Organizer.appdata.xml.in  avi.wad.Organizer.desktop.in  avi.wad.Organizer.gschema.xml  meson.build  org.gnome.Organizer.appdata.xml.in  org.gnome.Organizer.gschema.xml  org.librehunt.Organizer.appdata.xml.in  org.librehunt.Organizer.desktop.in  org.librehunt.Organizer.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  organizer.gresource.xml  organizer.in  row.ui  row.ui~  testing123window.ui~  window.py  window.ui  window.ui~  window_real.ui  window_temp.ui~
