datadir = join_paths('share', 'icons')
icondir = join_paths('hicolor', 'scalable', 'apps')
install_data (
    join_paths(icondir, 'org.librehunt.Organizer.svg'),
    install_dir: join_paths(datadir, icondir)
)

icondir = join_paths('hicolor', 'symbolic', 'apps')
install_data (
    join_paths(icondir, 'org.librehunt.Organizer-symbolic.svg'),
    install_dir: join_paths(datadir, icondir)
)
